k8s/blazor-docker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blazorindocker
  labels:
    app: blazor
spec:
  selector:
    matchLabels:
      app: blazor
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blazor
    spec:
      securityContext:
        runAsNonRoot: true
        capabilities:
          drop: ["ALL"]
        readOnlyRootFilesystem: true
      readinessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
      livenessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 15
        periodSeconds: 20
      containers:
      - name: blazorindocker
        image: piotrzan/blazorindocker
        ports:
        - containerPort: 80
        imagePullPolicy: Always
