k8s/blazor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blazorindocker-svc
spec:
  selector:
    app: blazor
  ports:
  - name: http
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
